# comprehension_cleaner

./: .gitignore  pyproject.toml  readme.md
comprehension_cleaner/: __main__.py  ast_analyzer.py
sample/: sample.py
